cmake_minimum_required(VERSION 2.6)

project (caffe2_cpp_tutorial)

#find_package(Protobuf REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(cURL QUIET)
find_package(CUDA QUIET)
find_package(Threads)

include_directories(include)
include_directories(${EIGEN3_INCLUDE_DIR})
if(OpenCV_LIBS)
  include_directories(${OpenCV_INCLUDE_DIRS})
endif()
if(CUDA_LIBRARIES)
  include_directories(${CUDA_INCLUDE_DIRS})
endif()

set(Caffe2_DIR "${PROJECT_SOURCE_DIR}/libtorch/share/cmake/Caffe2")
set(Torch_DIR "${PROJECT_SOURCE_DIR}/libtorch/share/cmake/Torch")
find_package(Caffe2 REQUIRED)
find_package(CURL REQUIRED)
#find_package(Torch REQUIRED)
find_library(GLOG_LIB glog)
find_library(GFLAGS_LIB gflags)
find_library(GTEST_LIB gtest)
find_library(NCCL_LIB nccl) # Somehow necessary to prevent "undefined reference to `ncclReduceScatter'"

get_cmake_property(_variableNames VARIABLES)
list (SORT _variableNames)
foreach (_variableName ${_variableNames})
     #message(STATUS "${_variableName}=${${_variableName}}")
endforeach()
message(LIBINFO ${TORCH_LIBRARY} ${CURL_LIBRARIES})

set(PB_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src/caffe2/util")

set(DLLEXPORT_STR "dllexport_decl=CAFFE2_API:")

#execute_process(
#    COMMAND /home/yliu/Projects/torch/pytorch/build/bin/protoc --proto_path=/home/yliu/Projects/torch/pytorch --proto_path=${PB_SOURCE_DIR} --cpp_out=${PB_SOURCE_DIR} "${PB_SOURCE_DIR}/model.proto"
#    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fPIC ")
set(ALL_LIBRARIES)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

macro(link_whole_archive lib)
  if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    list(APPEND ALL_LIBRARIES -Wl,-force_load,$<TARGET_FILE_NAME:${lib}> ${lib})
  elseif(MSVC)
    list(APPEND ALL_LIBRARIES -WHOLEARCHIVE:$<TARGET_FILE_NAME:${lib}>)
  else()
    list(APPEND ALL_LIBRARIES -Wl,--whole-archive ${lib} -Wl,--no-whole-archive)
  endif()
endmacro()

file(GLOB LIB_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/util/*.cc" "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cc" "${PROJECT_SOURCE_DIR}/src/cvplot/*.cc")
add_library(caffe2_cpp ${LIB_SOURCES})
link_whole_archive(caffe2_cpp)

if(CUDA_LIBRARIES)
  SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_61,code=sm_61;-std=c++14;)
  # set(CUDA_PROPAGATE_HOST_FLAGS OFF)
  list(APPEND CUDA_NVCC_FLAGS "-Wno-deprecated-gpu-targets")
  file(GLOB CUDA_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cu")
  cuda_add_library(caffe2_cpp_gpu ${CUDA_SOURCES})
  link_whole_archive(caffe2_cpp_gpu)
endif()

list(APPEND ALL_LIBRARIES ${TORCH_LIBRARY})
list(APPEND ALL_LIBRARIES ${C10_LIBRARY})
#list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libcaffe2_nvrtc.so")
#list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libcaffe2_detectron_ops_gpu.so")
#list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libcaffe2_observers.so")
list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libtorch_cpu.so")
list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libtorch_cuda.so")
list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libc10_cuda.so")
list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libc10.so")
list(APPEND ALL_LIBRARIES "${PROJECT_SOURCE_DIR}/libtorch/lib/libcaffe2_protos.a")
add_definitions(-DWITH_GPU)

set (PROTOBUF_LIBRARY "${PROJECT_SOURCE_DIR}/libtorch/lib/libprotobuf.a")
list(APPEND ALL_LIBRARIES ${PROTOBUF_LIBRARY})
list(APPEND ALL_LIBRARIES ${GLOG_LIB} ${GFLAGS_LIB})
list(APPEND ALL_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})

if(OpenCV_LIBS)
  list(APPEND ALL_LIBRARIES ${OpenCV_LIBS})
  add_definitions(-DWITH_OPENCV)
endif()

if(CUDA_LIBRARIES)
  list(APPEND ALL_LIBRARIES ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${CUDA_curand_LIBRARY} ${NCCL_LIB})
  add_definitions(-DWITH_CUDA)
endif()

if(CURL_LIBRARIES)
  list(APPEND ALL_LIBRARIES ${CURL_LIBRARIES})
  add_definitions(-DWITH_CURL)
endif()

if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
  set_property(TARGET ${name} PROPERTY CXX_STANDARD 14)
  include_directories("${PROJECT_SOURCE_DIR}/libtorch/include")
  include_directories("${PROJECT_SOURCE_DIR}/protobuf/include")
  include_directories("/home/yliu/dnn36/include")
  file(GLOB BIN_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/binaries/*.cc")
  foreach(filename ${BIN_SOURCES})
    get_filename_component(name ${filename} NAME_WE)
    add_executable(${name} ${filename})
    target_link_libraries(${name} ${ALL_LIBRARIES})
  endforeach()

  if(GTEST_LIB)
    file(GLOB TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/caffe2/util/*_test.cc" "${PROJECT_SOURCE_DIR}/test/caffe2/core/*_test.cc")
    foreach(filename ${TEST_SOURCES})
      get_filename_component(name ${filename} NAME_WE)
      add_executable(${name} ${filename})
      target_link_libraries(${name} ${ALL_LIBRARIES} ${GTEST_LIB})
    endforeach()
  endif()
endif()